# project-obsidian-mill

./: .gitattributes  Cargo.toml  README.md  index.html
assets/: spritesheet.json
resources/: tappy-plane.tps
src/: components.rs  lib.rs  texturepacker.rs  util.rs
src/systems/: hueshift.rs  mod.rs  render.rs  sprite.frag.glsl  sprite.vert.glsl
